# vulntracker

./: .env  .gitignore  db.sqlite3  main.py  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  decorators.py  forms.py  models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_username.py  0004_user_client.py
core/templatetags/: totp_filters.py
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_client_logo.py  0003_client_created_at_client_industry_contact_created_at.py
projects/: forms.py  models.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0002_project_notes_alter_project_client.py  0003_project_description.py  0004_auto_20250720_2319.py  0005_project_scope.py  0006_project_leader_remove_project_specialist_and_more.py
static/css/: cvss3.css
static/js/: cvss3.js  cvss4.js
templates/: auth_base.html  base.html
templates/components/: sidebar_Administrador.html  sidebar_Cliente.html
templates/componets/: sidebar.html
templates/core/: client_dashboard.html  dashboard.html  login.html  setup_totp.html  user_register.html  verify_totp.html
templates/customers/: client_details.html  client_form.html  client_list.html  contact_detail.html  contact_form.html  contact_list.html
templates/projects/: project_cards.html  project_confirm_delete.html  project_edit.html  project_list.html  project_new.html
vulnerabilities/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+14 files in other folders)
