[project]
name = "vulntracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "psycopg[binary]",
    "python-dotenv",
    "django-crispy-forms",
    "django-environ",
    "docxtpl",
    "django-otp>=1.6.1",
]
